Added more details

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
-					<h1 id="logo"><a href="#">Willis Corto</a></h1>
-					<p>I got reprogrammed by a rogue AI<br />
-					and now I'm totally cray</p>
+					<span class="image avatar"><img src="images/Jesse.jpeg" alt="" /></span>
+					<h1 id="logo"><a href="#">Jesse Lavendt</a></h1>
+					<p>A full stack engineer with a passion for music and videogames.<br />
+					</p>
 				</header>
 				<nav id="nav">
 					<ul>
@@ -53,27 +53,31 @@
 								</div>
 								<div class="container">
 									<header class="major">
-										<h2>Read Only</h2>
-										<p>Just an incredibly simple responsive site<br />
-										template freebie by <a href="http://html5up.net">HTML5 UP</a>.</p>
+										<h2>About me</h2>
+										<p>Who I am and
+										who I plan to be</p>
 									</header>
-									<p>Faucibus sed lobortis aliquam lorem blandit. Lorem eu nunc metus col. Commodo id in arcu ante lorem ipsum sed accumsan erat praesent faucibus commodo ac mi lacus. Adipiscing mi ac commodo. Vis aliquet tortor ultricies non ante erat nunc integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum.</p>
+									<p>Growing up in NoVa my two biggest passions were consistantly videogames and gymnastics and both were equally
+										important in shaping who I am today. I continued my passion for gymnastics by becoming a cheer leader for 
+									George Mason university and my love for videogames helped me to decide to major in computer science. In my old age,
+								 my love for gymnastics is still there, but it hurts too much. Forunately in my early twenties, I found a new love for 
+								guitar and music that has filled the void. Now, as a full stack engineer at Talentpath, I am lucky that I am able to 
+							keep up with my three driving passions: coding, videogames, and music.</p>
 								</div>
 							</section>
 
 						<!-- Two -->
 							<section id="two">
 								<div class="container">
-									<h3>Things I Can Do</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer lorem ipsum dolor sit amet.</p>
-									<ul class="feature-icons">
-										<li class="icon solid fa-code">Write all the code</li>
-										<li class="icon solid fa-cubes">Stack small boxes</li>
-										<li class="icon solid fa-book">Read books and stuff</li>
-										<li class="icon solid fa-coffee">Drink much coffee</li>
-										<li class="icon solid fa-bolt">Lightning bolt</li>
-										<li class="icon solid fa-users">Shadow clone technique</li>
-									</ul>
+									<h3>Skills and technologies</h3>
+									<p>A small list of relevant skills and technologies I am proficient in</p>
+									<h5>Languages</h5>
+									<p>Java, SQL, C, Python, Javascript, HTML, CSS</p>
+									<h5>Frameworks</h5>
+									<p>Springboot, Angular, React</p>
+									<h5>Miscellaneous technologies</h5>
+									<p>Unity, Github</p>
+									
 								</div>
 							</section>
 
