--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 				</header>
 				<nav id="nav">
 					<ul>
-						<li><a href="#one" class="active">About</a></li>
-						<li><a href="#two">Things I Can Do</a></li>
-						<li><a href="#three">A Few Accomplishments</a></li>
+						<li><a href="#one" class="active">About Me</a></li>
+						<li><a href="#two">Skills</a></li>
+						<li><a href="#three">Recent Projects</a></li>
 						<li><a href="#four">Contact</a></li>
 					</ul>
 				</nav>
@@ -54,8 +54,7 @@
 								<div class="container">
 									<header class="major">
 										<h2>About me</h2>
-										<p>Who I am and
-										who I plan to be</p>
+										<p>A little bit about me</p>
 									</header>
 									<p>Growing up in NoVa my two biggest passions were consistantly videogames and gymnastics and both were equally
 										important in shaping who I am today. I continued my passion for gymnastics by becoming a cheer leader for 
@@ -84,28 +83,33 @@
 						<!-- Three -->
 							<section id="three">
 								<div class="container">
-									<h3>A Few Accomplishments</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
+									<h3>A Few Recent Projects</h3>
+									<p>Below are a few projects that I believe showcase my abilities as an engineer.</p>
 									<div class="features">
 										<article>
-											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/usa.png" alt="" /></a>
 											<div class="inner">
-												<h4>Possibly broke spacetime</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<h4>Government Diversity Project</h4>
+												<p>Using a postgres database, a java-springboot backend, and an angular front-end, I created
+													a site that hosts a visualization of diversity in all government elected candidated over the past 
+													50 years.
+												</p>
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/Checkers.jpeg" alt="" /></a>
 											<div class="inner">
-												<h4>Terraformed a small moon</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<h4>Homemade Checkers</h4>
+												<p>Rebuilt checkers from the ground up with no preexisting libraries and hosted it on a local website
+													where you can save and play multiple games of checkers at once.
+												</p>
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/pong.png" alt="" /></a>
 											<div class="inner">
-												<h4>Snapped dark matter in the wild</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<h4>Recreated Pong</h4>
+												<p>Using the Unity Engine, I was able to create a replica of the classic game Pong.</p>
 											</div>
 										</article>
 									</div>
