--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
 										<h2>About me</h2>
 										<p>A little bit about me</p>
 									</header>
-									<p>Growing up in NoVa, my two biggest passions were consistantly videogames and gymnastics and both were equally
+									<p>Growing up in NoVa, my two biggest passions were videogames and gymnastics and both were equally
 										important in shaping who I am today. I continued my passion for gymnastics by becoming a cheer leader for 
 									George Mason university and my love for videogames helped me to decide to major in computer science. During my undergrad,
-									I was able to use the Unity engine to recreate Pong and I had the chance to work on a mobile app called Evershift
+									I was able to use the Unity engine to recreate Pong and I had the chance to work on a mobile app called Evershift https://www.evershift.io/
 									which seeks to pair restauraunts with able-bodied workers at a last minutes notice. In my old age,
 								 my love for gymnastics is still there, but it hurts too much. Forunately in my early twenties, I found a new love for 
 								guitar and music that has filled the void. Now, as a full stack engineer at Talentpath, I am lucky that I am able to 
@@ -70,6 +70,8 @@
 									<p>Springboot, Angular, React</p>
 									<h5>Miscellaneous technologies</h5>
 									<p>Unity, Github</p>
+									<h5>AWS Certificates</h5>
+									<p>AWS Cloud Practitioner Essentials</p>
 									
 								</div>
 							</section>
